deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
        - name: postgres
          image: docker.io/bitnami/postgresql:15
          ports:
          - containerPort: 5432
          volumeMounts:
          - name: postgres-storage
            mountPath: /bitnami/postgresql
      volumes:
      - name: postgres-storage
        emptyDir: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sechub-server
spec:
  selector:
    matchLabels:
      app: sechub-server
  replicas: 1
  template:
    metadata:
      labels:
        app: sechub-server
    spec:
      securityContext:
        runAsUser: 2323 # user id of the application user. (overrides settings in the Dockerfile)
        runAsGroup: 2323 # group id of the application group. (overrides setings in the Dockerfile)
        fsGroup: 2323 # group id of the application group. Set in the Dockerfile. This group has write access to the volumes.
      containers:
      - name: sechub-server
        image: ghcr.io/mercedes-benz/sechub/sechub-server:1.3.0_alpine
        imagePullPolicy: Always
        resources:
          requests:
            # Initial container memory size
            memory: 256Mi
          limits:
            # Maximum container memory size
            memory: 1Gi
        ports:
        - name: sechub-https
          containerPort: 8444
        startupProbe:
          httpGet:
            scheme: HTTPS
            path: /api/anonymous/check/alive
            port: sechub-https
          failureThreshold: 24
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
          initialDelaySeconds: 5
        livenessProbe:
          httpGet:
            scheme: HTTPS
            path: /api/anonymous/check/alive
            port: sechub-https
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 3
